name:                dayj
version:             0.1.0.0
synopsis:            Day journal
homepage:            https://github.com/pharpend/dayj
license:             GPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2015 Peter Harpending
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable dayj
  build-depends:
      base >=4.8 && <4.9
    , bytestring
    , directory >=1.2.3
    , editor-open
    , time
    , unordered-containers
    , yaml
  default-extensions:
    LambdaCase
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
